--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,23 @@
 <router-outlet>
 
-    <h1> {{ name | titlecase}} </h1>
+    <div class="text-layout">
+        <h1> {{ name | titlecase}} </h1>
 
-    <button (click)="showName()">
-        Change Name
-    </button>
-    
+        <button pButton
+                icon="pi pi-search"
+                iconPos="right"
+                (click)="showName()" 
+                class="p-button-help"
+                label="Click">
+        </button>
+
+        
+        <p-card [header]="name | uppercase"
+                subheader="Subheader">
+                <h3>Content</h3>
+        </p-card>
+
+       
+    </div>
+
 </router-outlet>
