--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body{
+    margin: 10px;
+    font-family: var( --font-family);
+    background-color: var( --surface-b);
+}
+
+.text-layout{
+    color:var( --text-color);
+}
