--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <router-outlet>
 
-    <div class="text-layout">
+    <app-menu></app-menu>
+    <!-- <div class="text-layout">
         <h1> {{ name | titlecase}} </h1>
 
         <button pButton
@@ -18,6 +19,6 @@
         </p-card>
 
        
-    </div>
+    </div> -->
 
 </router-outlet>
