--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,3 @@
-<p-menubar [model]="items"></p-menubar>
+<p-menubar [model]="items">
+    <img src="../../../favicon.ico" alt="Icon" width="30px">
+</p-menubar>
