--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -1,1 +1,20 @@
-<p>numeros works!</p>
+<div class="text-layout">
+    <h1>Decimal Pipe & Porcent</h1>
+    <p>Pipes de Angular - Usualmente incluidos en el Common Module</p>
+</div>
+
+<!-- https://angular.io/api/common/DecimalPipe -->
+
+<div class="p-grid">
+
+    <div class="p-col-4">
+        <p-card
+            header="Ventas netas"
+            subheader="del presente año">
+            <i class="pi pi-dollar"></i>
+            {{ ventasNeta | number }} /
+            <i class="pi pi-dollar"></i>
+            {{ ventasNeta | number: '1.2-2' }}
+        </p-card>
+    </div>  
+    </div>  
