added sum into var

--- a/src/app/ventas/pages/numeros/numeros.component.html
+++ b/src/app/ventas/pages/numeros/numeros.component.html
@@ -14,7 +14,9 @@
             <i class="pi pi-dollar"></i>
             {{ ventasNeta | number }} /
             <i class="pi pi-dollar"></i>
-            {{ ventasNeta | number: '1.2-2' }}
+            {{ ventasNeta | number: '1.2-2' }} /
+            <i class="pi pi-dollar"></i>
+            {{ (ventasNeta + 10000000000 )| number: '1.2-2' }}
         </p-card>
     </div>  
     </div>  
