design layout & used fieldset

--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,1 +1,20 @@
-<p>no-comunes works!</p>
+<div class="text-layout">
+    <h1>Pipes No tan comunes</h1>
+    <p>Pipes de Angular - Usualmente incluidos en el Common Module</p>
+</div>
+
+<div class="p-grid">
+    <!-- para pantallas medianas (md), numero columnas (sm) -->
+    <div class="p-col p-md-6 p-sm-9">
+        <!-- http://primefaces.org/primeng/fieldset -->
+        <p-fieldset legend="i18nSelect-Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+
+    <div class="p-col p-md-6">
+        <p-fieldset legend="i18nSelect-Plural Pipe" [toggleable]="true">
+            Content
+        </p-fieldset>
+    </div>
+</div>
