--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -12,9 +12,16 @@
         <!-- http://primefaces.org/primeng/fieldset -->
 
         <p-fieldset legend="i18nSelect-Pipe" [toggleable]="true">
-            Saludos {{ name }}, es un placer 
-            {{genero | i18nSelect:invitacionMapa }} 
-            a nuestro evento.
+            <p> Saludos {{ name }}, es un placer 
+                {{genero | i18nSelect:invitacionMapa }} 
+                a nuestro evento.
+            </p>
+
+            <button pButton 
+                    label="Cambiar persona"
+                    (click)="cambiarCliente()"
+                    class="p-button-help">
+            </button>
         </p-fieldset>
     </div>
 
@@ -22,8 +29,16 @@
         <!-- https://angular.io/api/common/I18nPluralPipe -->
 
         <p-fieldset legend="i18nSelect-Plural Pipe" [toggleable]="true">
-            Actualmente {{ clientes.length | i18nPlural:clentesMapa }}
+            <p> 
+                Actualmente {{ clientes.length | i18nPlural:clentesMapa }}
+            </p>  
+            <button pButton 
+                    label="Borrar cliente"
+                    (click)="borrarCliente()"
+                    class="p-button-danger">
+            </button>
         </p-fieldset>
+
     </div>
 </div>
 
