--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -42,3 +42,28 @@
     </div>
 </div>
 
+<!-- https://angular.io/api/common/SlicePipe -->
+
+<div class="p-col p-md-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+    <b>Original</b>
+        <pre>{{ clientes.length }}</pre>
+        
+        <b> slice: 2:2 </b>
+        <pre>{{ clientes | slice:0:2 }}</pre>
+        
+        <b> slice: 1:4 </b>
+        <pre>{{ clientes | slice:1:4 }}</pre>
+
+            
+        <b> slice: 0:4 </b>
+        <pre>{{ clientes | slice:0:5 }}</pre>
+
+            
+        <b> slice: 1:4 (Strings) </b>
+        <pre>{{ name | slice:1:4 }}</pre>
+
+        
+    </p-fieldset>
+
+</div>
