Create personalize pipe

--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,7 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1>Pipes personalizados</h1>
+    <p>Pipes de Angular - Creados de 0 (personalizado)</p>
+    <p> Pipes creados por {{ 'nosotros' | mayusculas:enMayuscula }} </p>
+
+    <button pButton type="button"label="togle mayúsuclas" (click)="change()"></button>
+</div>
