--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,3 +1,6 @@
+
+
+
 <p-menubar [model]="items">
-    <img src="../../../favicon.ico" alt="Icon" width="30px">
+    <img src="./favicon.ico" />
 </p-menubar>
