--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -1,112 +1,103 @@
 <div class="text-layout">
-    <h1>Pipes No tan comunes</h1>
-    <p>Pipes de Angular - Usualmente incluidos en el Common Module</p>
+    <h1>Pipes no tan comunes </h1>
+    <p>
+        Pipes incluídos en Angular - Usualmente en el Common Module.
+    </p>
 </div>
 
 
-<!-- PIPE FIELDSET -->
-<!-- https://angular.io/guide/i18n-overview -->
-<!-- https://angular.io/api/common/I18nSelectPipe -->
 <div class="p-grid">
-    <!-- para pantallas medianas (md), numero columnas (sm) -->
-    <div class="p-col p-md-6 p-sm-9">
-        <!-- http://primefaces.org/primeng/fieldset -->
 
-        <p-fieldset legend="i18nSelect-Pipe" [toggleable]="true">
-            <p> Saludos {{ name }}, es un placer 
-                {{genero | i18nSelect:invitacionMapa }} 
+    <div class="p-col p-md-6">
+        <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">  
+            <p>
+                Saludos {{ nombre }}, es un placer 
+                {{ genero | i18nSelect:invitacionMapa }}
                 a nuestro evento.
             </p>
-
-            <button pButton 
-                    label="Cambiar persona"
-                    (click)="cambiarCliente()"
-                    class="p-button-help">
-            </button>
+            <button (click)="cambiarCliente()" pButton label="Cambiar Persona" class="p-button-help"></button>
         </p-fieldset>
     </div>
 
     <div class="p-col p-md-6">
-        <!-- https://angular.io/api/common/I18nPluralPipe -->
+        <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+            
+            <p>
+                Actualmente {{ clientes.length | i18nPlural:clientesMapa }}
+            </p>
 
-        <p-fieldset legend="i18nSelect-Plural Pipe" [toggleable]="true">
-            <p> 
-                Actualmente {{ clientes.length | i18nPlural:clentesMapa }}
-            </p>  
-            <button pButton 
-                    label="Borrar cliente"
-                    (click)="borrarCliente()"
+            <button (click)="borrarCliente()" 
+                    pButton 
+                    label="Borrar cliente" 
                     class="p-button-danger">
             </button>
+
         </p-fieldset>
-
     </div>
-</div>
 
-<!-- SLICE PIPE -->
-<div class="p-col p-md-6">
-    <!-- https://angular.io/api/common/SlicePipe -->
+    <div class="p-col p-md-6">
+        <p-fieldset legend="Slice Pipe" [toggleable]="true">
+          
+            <b>Original</b>
+            <pre>{{ clientes }}</pre>
 
-    <p-fieldset legend="Slice Pipe" [toggleable]="true">
-    <b>Original</b>
-        <pre>{{ clientes.length }}</pre>
-        
-        <b> slice: 2:2 </b>
-        <pre>{{ clientes | slice:0:2 }}</pre>
-        
-        <b> slice: 1:4 </b>
-        <pre>{{ clientes | slice:1:4 }}</pre>
-
+            <b>slice:0:2</b>
+            <pre>{{ clientes | slice:0:2 }}</pre>
             
-        <b> slice: 0:4 </b>
-        <pre>{{ clientes | slice:0:5 }}</pre>
+            <b>slice:1:2</b>
+            <pre>{{ clientes | slice:1:2 }}</pre>
 
+            <b>slice:1:3</b>
+            <pre>{{ clientes | slice:1:3 }}</pre>
+
+            <b>slice:3:3</b>
+            <pre>{{ clientes | slice:3:4 }}</pre>
+
+            <b>slice:0:4</b>
+            <pre>{{ nombre | slice:0:4 }}</pre>
+
+
+        </p-fieldset>
+    </div>
+
+
+    <div class="p-col p-md-6">
+        <p-fieldset legend="Json Pipe" [toggleable]="true">
+
+            <pre>{{ heroes | json }}</pre>
+
+
+        </p-fieldset>
+    </div>
+
+
+    <div class="p-col p-md-6">
+        <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+
+            <ul>
+                <li *ngFor="let item of persona | keyvalue">
+                    <b>{{ item.key | titlecase }}:</b> {{ item.value }}
+                </li>
+            </ul>
+
+
+        </p-fieldset>
+    </div>
+
+    <div class="p-col p-md-6">
+        <p-fieldset legend="Async Pipe" [toggleable]="true">
+
+            <pre *ngIf="!(miObservable | async)">Resolviendo observable</pre>
+            <pre>{{ miObservable | async }}</pre>
+
+            <pre *ngIf="!(valorPromesa | async)">Resolviendo promesa</pre>
+            <pre>{{ valorPromesa | async }}</pre>
             
-        <b> slice: 1:4 (Strings) </b>
-        <pre>{{ name | slice:1:4 }}</pre>
+        </p-fieldset>
+    </div>
 
 
-    </p-fieldset>
 
+
+    
 </div>
-
-<!-- KEYVALUEPIPE -->
-<div class="p-col p-md-6">
-    <!-- https://angular.io/api/common/KeyValuePipe -->
-
-    <p-fieldset legend="KeyValuePipe" [toggleable]="true">
-        <ul>
-            <li *ngFor="let item of persona | keyvalue">
-                <b>{{ item.key | titlecase}}</b> : {{ item.value }}
-            </li>
-        </ul>
-    </p-fieldset>
-</div>
-
-<!-- JSON PIPE  util para hacer depuraciones-->
-<!-- nO GRAFICA OBJETOS CON FUNCIONES  -->
-<div class="p-col p-md-6">
-    <!-- https://angular.io/api/common/JsonPipe -->
-    <p-fieldset legend="Json PIPE" [toggleable]="true">
-       <pre>
-        {{ heroe | json}}
-       </pre> 
-
-       <!-- secodn way -->
-        <!-- <ul> -->
-            <!-- <li *ngFor="let item of heroe | keyvalue"> -->
-                <!-- {{ item.value | json }} -->
-            <!-- </li> -->
-        <!-- </ul> -->
-    </p-fieldset>
-</div>
-
-<!-- asyncPipe sólo pasa promesas u obesrvables-->
-<div class="p-col p-md-6">
-    <!-- https://angular.io/api/common/AsyncPipe -->
-    <p-fieldset legend="Async PIPE" [toggleable]="true">
-        <pre>{{ miObservale | async }}</pre> 
-        <pre *ngIf="!(valorPromesa | async)">Resolviendo</pre>
-        <pre>{{ valorPromesa | async }}</pre>
-  
-
